fix(storybook): Prevent very large gap before consecutive detail elements on the solr search sidebar

--- a/src/styles/elements/_facet-details.css
+++ b/src/styles/elements/_facet-details.css
@@ -11,7 +11,7 @@
     padding-bottom: 0;
 }
 
-.facet-details + .facet-details {
+:is(.facet-details, .facet-option) + .facet-details {
     --details-margin: 0;
 
     border-top: none;
